# crewai

./: README.md  pyproject.toml  report.md  requirements.txt
1_crew_understanding/: 1_email_agent.ipynb  2_email_agent_with_tool.ipynb  3_multiple_crewagents.ipynb  4_multiple_crewagents_with_tools.ipynb  5a_yaml.py  5b_yaml_official_doc.py  6_memory.py
1_crew_understanding/config/: tasks.yaml
4_marketing-crew-usecase/: crew.py  usecase_requirement.md  usecase_requirement.txt
